RPN-35: add burn lazy mint
